<resources>
    <string name="app_name">Rumah Kos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mengambil_data">Mengambil data...</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidHJpYXNmYWhydWRpbiIsImEiOiJja2Z5MDhjZXYydTRmMnFwYTlrb2szdDhlIn0.GEo0n59yXcAIhKXnO46DIQ</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notification</string>
    <string name="title_profile">Profil</string>
    <string name="title_edit_profile">Edit Profil</string>
    <string name="title_verifikasi_profile">Verifikasi Profil</string>
    <string name="title_tagihan">Tagihan</string>
    <string name="title_riwayat_sewa">Riwayat Sewa</string>
    <string name="title_sewa_aktif">Sewa Aktif</string>
    <string name="title_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_mutasi_dana">Mutasi Dana</string>

</resources>
